Alter mathjax color for maximized green-ness

--- a/wikipendium/wiki/static/codemirror/wikipendium.css
+++ b/wikipendium/wiki/static/codemirror/wikipendium.css
@@ -20,7 +20,7 @@
 
 .cm-mathjax-inline,
 .cm-mathjax-block {
-    color: #4C581A;
+    color: #4CA828;
 }
 
 .cm-s-wikipendium .CodeMirror-activeline-background {background: #e8f2ff !important;}
