Show language options when adding a new language version.

--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -2,7 +2,7 @@
 
 {% block nav %}
 <a class=button href=/new/>Create article</a>
-{% if articleContent.pk %}
+{% if form.instance.article.pk %}
     <div class=button-group style=inline-block>
         {% if availableLanguages.items %}
             <div class="has-dropdown button-dropdown text-left">
