--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -85,7 +85,10 @@ MathJax.Hub.Config({
                 });
             }
 
-            $(".select_chosen").chosen({width:'100%'});
+            $(".select_chosen").chosen({
+                width:'100%',
+                no_results_text: "Language already in use, or doesn't exist."
+            });
 
             function create_article() {
                 var redirect_url = $('#create-article-slug').val() + "/edit/";
