--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -67,14 +67,7 @@
     <input type=submit class="button button-large float-right" value=Save! />
 </form>
 <div class="help-container">
-<h3>Help:</h3>
-    <ul>
-        <li><a href=http://daringfireball.net/projects/markdown/basics>Guide to Markdown</a></li>
-        <li><a href=http://en.wikibooks.org/wiki/LaTeX/Mathematics>Guide to mathematical notation in LaTeX</a></li>
-        <li><a href=http://code.google.com/p/support/wiki/WikiSyntax#Tables>Guide to using tables</a></li>
-    </ul>
-<h3>Mathematical notation may be written as follows:</h3>
-    <p>Inline math uses single dollar signs, like this <span class="tex2jax_ignore">$ y = x $</span>,  while blocks of math are indicated with double dollar signs:</p>
-    <pre>$$ y = 2*x $$</pre>
+    <h2>How do I do this?</h2>
+    {% include "writing_guide.html" %}
 </div>
 {% endblock %}
