Update titles for history and diff view

--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Diff: {{ ac.article.slug }} – 
+{% endblock %}
+
 {% block body_class %}article{% endblock %}
 
 {% block nav %}
