--- a/wikipendium/wiki/templates/history.html
+++ b/wikipendium/wiki/templates/history.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+History: {{ article.slug }} –  
+{% endblock %}
+
 {% block body_class %}article{% endblock %}
 
 {% block nav %}
