Create wikipendium style password change form. closes #102

--- a/wikipendium/wiki/templates/registration/password_change_form.html
+++ b/wikipendium/wiki/templates/registration/password_change_form.html
@@ -1,5 +1,5 @@
-
 {% extends "base.html" %}
+
 {% load i18n %}
 
 {% block title %} {% trans 'Password change' %} {% endblock %}
@@ -10,22 +10,51 @@
 
 <p>{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</p>
 
-<form action="" method="post">
+<form action="" method="post" class="change-password-form">
 {% csrf_token %}
-{{ form.old_password.errors }}
-<p class="aligned wide"><label for="id_old_password">{% trans 'Old password:' %}</label>{{ form.old_password }}</p>
-{{ form.new_password1.errors }}
-<p class="aligned wide"><label for="id_new_password1">{% trans 'New password:' %}</label>{{ form.new_password1 }}</p>
-{{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}</p>
 
-<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
+    <div class="field-group {%if form.old_password.errors %}error{% endif %}">
+        <label for="id_old_password">{% trans 'Old password:' %}</label>
+        <div class="field">
+            {{ form.old_password }}
+
+            {% if form.old_password.errors %}
+            <div class=error-message>
+                {{form.old_password.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
+    <div class="field-group {%if form.new_password1.errors %}error{% endif %}">
+        <label for="id_new_password1">{% trans 'New password:' %}</label>
+        <div class="field">
+            {{ form.new_password1 }}
+            
+            {% if form.new_password1.errors %}
+            <div class=error-message>
+                {{form.new_password1.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
+
+    <div class="field-group {%if form.new_password2.errors %}error{% endif %}">
+        <label for="id_new_password2">{% trans 'Confirm password:' %}</label>
+        <div class="field">
+            {{ form.new_password2 }}
+            
+            {% if form.new_password2.errors %}
+            <div class=error-message>
+                {{form.new_password2.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
+<p><input type="submit" class="button float-right" value="{% trans 'Change my password' %}" /></p>
 </form>
 
-
-
 {% endblock %}
 
-{% block content-related %}
-
-{% endblock %}
