--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2241,7 +2241,9 @@ form .field-group.content-field {
  * LOGIN
 ******************/
 
-.login-form, .register-form{
+.login-form,
+.register-form,
+.change-password-form {
     width:320px;
     margin:0 auto;
 }
