--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -9,6 +9,9 @@
         <a href=#math-tab>Math</a>
     </li>
     <li>
+        <a href=#tables-tab>Tables</a>
+    </li>
+    <li>
         <a href=#ref-tab>References</a>
     </li>
 </ul>
@@ -32,6 +35,12 @@
 
     <div class=tab id="links-and-images-tab">
         Links and images
+    </div>
+
+    <div class=tab id="tables-tab">
+        <pre><code>|| <strong>__Heading 1__</strong> || <strong>__Heading 2__</strong> ||
+|| Row 1, Col 1  || Row 1, Col 2  ||
+|| Row 2, Col 1  || Row 2, Col 2  ||</code></pre>
     </div>
 
     <div class=tab id="math-tab">
