Add markdown table instructions

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2316,7 +2316,7 @@ form .field-group.content-field {
     margin: .5em 0;
 }
 .help-container ul {
-    padding-left: 1em;
+    padding-left: 10px;
 }
 
 
@@ -2537,4 +2537,5 @@ input[readonly=True]{
 
 #help-tabs-container {
     min-height: 300px;
+    padding: 5px 20px;
 }
