Add information on links, images and lists

--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -25,16 +25,35 @@
 
         <h4>Paragraphs</h4>
         <p>Paragraphs are separated with a blank line.</p>
+        <pre><code>So this line, and the next line.
+Is actually the same paragraph.
+
+While this becomes a new one.</code></pre>
 
         <h4>Bold</h4>
         <p><strong>__These two underscores make the text bold.__</strong></p>
 
         <h4>Italic</h4>
         <p><em>_One underscore, and the text becomes italic.__</em></p>
+
+        <h4>Lists</h4>
+        <pre><code>* This
+* is
+* a
+* list</code></pre>
+        <pre><code>1. While this one...
+2. has numbers.
+1. And you don't have to know how to count.
+5. We will correct the numbers for you.</code></pre>
     </div>
 
     <div class=tab id="links-and-images-tab">
-        Links and images
+        <h4>Links</h4>
+        <code>[This is a link](http://tothispage.com/)</code>
+        <p>If you want to show the link URL, you can simply type:</p>
+        <code>&lt;http://theurl.com/&gt;</code>
+        <h4>Images</h4>
+        <code>![Alt text](http://url.to/image.png)</code>
     </div>
 
     <div class=tab id="tables-tab">
