added blackquotes, subpoints in lists and LaTeX example

--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -40,11 +40,25 @@ While this becomes a new one.</code></pre>
         <pre><code>* This
 * is
 * a
-* list</code></pre>
+* list
+    * with
+    * subpoints
+    * like pressing tab</code></pre>
         <pre><code>1. While this one...
 2. has numbers.
 1. And you don't have to know how to count.
-5. We will correct the numbers for you.</code></pre>
+5. We will correct the numbers for you.
+    2. and we will
+    23. count the subsections
+    1. correct
+6. and continue with the right numbers here</code></pre>
+
+    <h4>Blockquotes</h4>
+    <pre><code>> in front of the text gives a blockquote
+
+> You can
+even split the text to seperate lines
+and it will still be the same blockquote</code></pre>
     </div>
 
     <div class=tab id="links-and-images-tab">
@@ -66,6 +80,10 @@ While this becomes a new one.</code></pre>
         <h4>Mathematical notation may be written as follows:</h4>
         <p>Inline math uses single dollar signs, like this <code class="inline">$ y = x $</code>,  while blocks of math are indicated with double dollar signs:</p>
         <code>$$ y = 2*x $$</code>
+
+        <h4>We support standard LaTeX syntax</h4>
+        <code>$$ e^{ \pm i\theta } = \cos \theta \pm i\sin \theta $$</code>
+        <p>This piece of code will show Euler's formula. This also goes for far more complicated LaTeX as matrixes and so on.</p>
     </div>
 
     <div class=tab id="ref-tab">
