--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -15,11 +15,11 @@
 
 <input id=searchbox type=text placeholder="find a compendium..." />
 
-<div class="popular-articles serif">
-    <h2>Popular compendiums</h2>
+<div class="random-articles serif">
+    <h2>Random compendiums</h2>
     <ul>
-        {% for ac in popularACs %}
-            <li><a href={{ac.get_url}}>{{ac.get_full_title}}</a></li>
+        {% for ac in random_articles %}
+            <li><a href={{ ac.get_url }}>{{ ac.get_full_title }}</a></li>
         {% endfor %}
     </ul>
 </div>
