--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2182,8 +2182,10 @@ h1,h2,h3,h4,h5,h6{
 code {
     background:#fafafa;
     border:1px solid #eaeaea;
+    display: inline;
+    padding: 5px;
 }
-code:not(.inline) {
+pre code {
     font-size:14px; 
     line-height: 18px;
     padding:10px;
@@ -2192,10 +2194,6 @@ code:not(.inline) {
     box-shadow: -1px -1px 0px rgba(0,0,0,0.2);
     margin-bottom:20px;
     overflow:auto;
-}
-code.inline {
-    display: inline;
-    padding: 5px;
 }
 
 
