Add markdown introduction and de-roundify code blocks slightly

--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -19,7 +19,10 @@
 </ul>
 <div class=tab-container id="help-tabs-container">
     <div class="tab active" id="general-tab">
-        <a href=http://daringfireball.net/projects/markdown/basics>The Markdown Specification.</a>
+        <p><em>Wikipendiums are written using markdown syntax.<br />
+            <a href=http://daringfireball.net/projects/markdown/basics target=_blank>The full specification</a> is available, if you're into that.<br />
+            This is the short version:</em>
+        </p>
         
         <h4>Heading</h4>
         <p>Headings are defined by using <code>#</code>.
