Add markdown introduction and de-roundify code blocks slightly

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -776,7 +776,7 @@ dl,
 table,
 figure,
 hgroup {
-  margin: 0 0 14px;
+  margin: 8px 0 14px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -2187,7 +2187,7 @@ pre code {
     line-height: 18px;
     padding:10px;
     display:block;
-    border-radius:10px;
+    border-radius:5px;
     box-shadow: -1px -1px 0px rgba(0,0,0,0.2);
     margin-bottom:20px;
     overflow:auto;
