--- a/wikipendium/wiki/templates/registration/password_reset_confirm.html
+++ b/wikipendium/wiki/templates/registration/password_reset_confirm.html
@@ -1,7 +1,5 @@
-{% extends "registration/base.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-
-{% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
 
 {% block title %}{% trans 'Password reset' %}{% endblock %}
 
@@ -13,13 +11,37 @@
 
 <p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
 
-<form action="" method="post">
-	{% csrf_token %}
-{{ form.new_password1.errors }}
-<p class="aligned wide"><label for="id_new_password1">{% trans 'New password:' %}</label>{{ form.new_password1 }}</p>
-{{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
+<form action="" method="post" class="confirm-password-form">
+{% csrf_token %}
+
+    <div class="field-group">
+        <label for="id_newpassword1">{% trans 'New password:' %}</label>
+        <div class="field">
+            {{ form.new_password1 }}
+
+            {% if form.new_password1.errors %}
+                <div class=error-message>
+                    {{ form.new_password1.errors|join:", "}}
+                </div>
+            {% endif %}
+        </div>
+    </div>
+
+    <div class="field-group">
+        <label for="id_newpassword2">{% trans 'New password:' %}</label>
+        <div class="field">
+            {{ form.new_password2 }}
+
+            {% if form.new_password2.errors %}
+                <div class=error-message>
+                    {{ form.new_password2.errors|join:", "}}
+                </div>
+            {% endif %}
+        </div>
+    </div>
+
+<p><input type="submit" value="{% trans 'Change my password' %}" class="button float-right" /></p>
+
 </form>
 
 {% else %}
