--- a/wikipendium/wiki/templates/registration/password_reset_form.html
+++ b/wikipendium/wiki/templates/registration/password_reset_form.html
@@ -1,7 +1,6 @@
-{% extends "registration/base.html" %}
-{% load i18n %}
+{% extends "base.html" %}
 
-{% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
+{% load i18n %}
 
 {% block title %}{% trans "Password reset" %}{% endblock %}
 
@@ -11,10 +10,25 @@
 
 <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
 
-<form action="" method="post">
-	{% csrf_token %}
-{{ form.email.errors }}
-<p><label for="id_email">{% trans 'E-mail address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
+<form action="" method="post" class="reset-password-form">
+{% csrf_token %}
+
+    <div class="field-group {%if form.email.errors %}error{% endif %}">
+        <label for="id_email">{% trans 'Your e-mail address:' %}</label>
+        <div class="field">
+            {{ form.email }}
+
+            {% if form.email.errors %}
+            <div class="error-message">
+                {{ form.email.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
+    <p>
+        <input type="submit" value="{% trans 'Reset my password' %}" class="button float-right " />
+    </p>
 </form>
 
 {% endblock %}
