--- a/wikipendium/wiki/templates/registration/password_reset_done.html
+++ b/wikipendium/wiki/templates/registration/password_reset_done.html
@@ -1,7 +1,5 @@
-{% extends "registration/base.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-
-{% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
 
 {% block title %}{% trans 'Password reset successful' %}{% endblock %}
 
