Add link to password reset form

--- a/wikipendium/wiki/templates/registration/login.html
+++ b/wikipendium/wiki/templates/registration/login.html
@@ -36,10 +36,16 @@
         </div>
     </div>
 
-    <span class="float-left">Not registered?
-        <a href="/accounts/register/">Sign up</a>
+    <span class="float-left">
+        <p>
+            <a href="/accounts/password/reset/">Forgot password?</a>
+        </p>
+        <p>Not registered?
+            <a href="/accounts/register/">Sign up</a>
+        </p>
     </span>
-<input class="button float-right" type="submit" value="Log in" />
+
+    <input class="button float-right" type="submit" value="Log in" />
 </form>
 
 {% endblock %}
