updated the writing guide in regards to linking inside the article, also updated the default way of making a list in the guide

--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -54,12 +54,12 @@ and it will still be the same blockquote.</code></pre>
 
     <div class="tab" id="lists-tab">
         <h4>Unordered lists</h4>
-        <pre><code>* This
-* is
-* a
-* list
-    * And you can have sub-lists too
-    * by indenting them with a tab</code></pre>
+        <pre><code>- This
+- is
+- a
+- list
+    - And you can have sub-lists too
+    - by indenting them with a tab</code></pre>
 
         <h4>Ordered lists</h4>
         <pre><code>1. While this one...
@@ -78,6 +78,8 @@ and it will still be the same blockquote.</code></pre>
         <pre><code>[This is a link](http://tothispage.com/)</code></pre>
         <p>If you want to show the link URL, you can simply type:</p>
         <pre><code>&lt;http://theurl.com/&gt;</code></pre>
+        <p>To link to other sections in the article, use this format:</p>
+        <pre><code>[Section Name](#section-name)</code></pre>
         <h4>Images</h4>
         <pre><code>![Alt text](http://url.to/image.png)</code></pre>
     </div>
