--- a/wikipendium/wiki/templates/registration/password_reset_email.html
+++ b/wikipendium/wiki/templates/registration/password_reset_email.html
@@ -1,15 +1,14 @@
-{% load i18n %}{% autoescape off %}
+{% load i18n %}{% load url from future %}
+{% autoescape off %}
 {% trans "You're receiving this e-mail because you requested a password reset" %}
-{% blocktrans %}for your user account at {{ site_name }}{% endblocktrans %}.
+{% blocktrans %}for your user account at Wikipendium{% endblocktrans %}.
 
 {% trans "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url django.contrib.auth.views.password_reset_confirm uidb36=uid, token=token %}
+{{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
 {% endblock %}
 {% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
-{% trans "Thanks for using our site!" %}
-
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+{% blocktrans %}The Wikipendium team{% endblocktrans %}
 
 {% endautoescape %}
