--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2143,19 +2143,20 @@ body.frontpage:before {
     line-height: 1.55em;
 }
 
-h1{margin: 30px 0 20px;}
-h2{margin: 48px 0 8px;}
-h3{margin: 48px 0 8px;}
-h4{margin: 48px 0 8px;}
-h5{margin: 48px 0 8px;}
-h6{margin: 48px 0 8px;}
+#article section {
+    padding-top: 70px;
+    margin-top: -50px;
+}
 
 h1,h2,h3,h4,h5,h6{
     font-weight:bold;
+    margin: 0 0 8px;
 }
+h1{margin-bottom: 20px;}
+
 
 #article .title{
-    margin-bottom:20px;
+    margin: 30px 0 20px;
     text-align: left;
 }
 
