Re-add prettyprint code formatting

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -15,7 +15,7 @@
     <link rel=stylesheet href={{STATIC_URL}}css/master.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/wikipendium.css />
-    <link href="{{STATIC_URL}}google-code-prettify/prettify.css" rel="stylesheet" />
+    <link href="{{STATIC_URL}}google-code-prettify/prettify.css?autoload=false" rel="stylesheet" />
     <link rel=stylesheet href={{STATIC_URL}}chosen/chosen.min.css />
     {% block css %}
     {% endblock %}
