Fix margin issue in /all

--- a/wikipendium/wiki/templates/all.html
+++ b/wikipendium/wiki/templates/all.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div id=article class=serif>
-    <h2>All compendiums:</h2>
+    <h1 class=title>All compendiums:</h1>
     <blockquote><p><strong><em>Use CTRL+F to find your compendium.</em></strong></p></blockquote>
     <ul class=article-all-list>
         {% for ac in complete_list %}
