Add codemirror image uploading from clipboard

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -26,6 +26,7 @@
     {% compress js %}
     <script src={{STATIC_URL}}js/bootstrap.min.js></script>
     <script src={{STATIC_URL}}codemirror/codemirror.min.js></script>
+    <script src={{STATIC_URL}}codemirror/codemirror.inline-attach.min.js></script>
     <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
     <script src="{{STATIC_URL}}chosen/chosen.jquery.min.js"></script>
     <script src={{STATIC_URL}}js/script.js></script>
