--- a/wikipendium/allsearch/static/css/allsearch.css
+++ b/wikipendium/allsearch/static/css/allsearch.css
@@ -1,10 +1,14 @@
 .all-articles {
+    margin-top: 100px;
+}
+
+#all-list {
     list-style-type: none;
     margin:0;
     padding: 0;
 }
 
-.all-articles li {
+#all-list li {
     padding: 2em;
     border: 1px solid #ccc;
     margin-bottom: .7em;
@@ -18,6 +22,8 @@
     overflow: hidden;
 }
 
-.title {
-    margin-top: 100px;
+@media screen and (max-width: 320px) {
+    #all-list li {
+        width: 100%;
+    }
 }
