--- a/wikipendium/wiki/templates/no_article.html
+++ b/wikipendium/wiki/templates/no_article.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div id=article class=serif>
     <div class=no-article>
-        <h1>An article with the course code {{ slug }} does not exist.</h1>
+        <h1 class=title>An article with the course code {{ slug }} does not exist.</h1>
         <h2><a href="{{ create_url }}">Create it?</a></h2>
     </div>
 </div>
