Change to recently updated articles on front page
The frontpage used to have random articles on the front page. This
commit changes the front page so that it shows the most recently updated
compendiums instead.

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2358,14 +2358,14 @@ form .field-group.content-field {
 
 
 /********************
- * POPULAR-ARTICLES
+ * RECENTLY-UPDATED-ARTICLES
 ********************/
 
-.random-articles{
+.recently-updated-articles{
     margin-top:100px;
 }
 
-.random-articles ul li{
+.recently-updated-articles ul li{
     list-style-type:none; 
     display:inline-block;
     width:32%;
