Add contact mailto link in footer

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -91,6 +91,7 @@
     </div>
     <footer id="page-footer">
             <div class="container" style=font-variant:small-caps>
+                <a href=mailto:contact@wikipendium.no style=float:left>Contact</a>
                 <a href=/>Wikipendium</a> <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
         </div>
     </footer>
