Organise profile contributions by article
The profile of people with many contributions looked messy. This commit
tries to remedy this by grouping article contributions by (article,
language), and hiding everything but the article name by default. There
was also an inconsistency in header tag usage on the profile page, which
has been fixed in this commit.

This fixes #209.

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2398,7 +2398,7 @@ ins{
 .article-history-list {
     list-style-type: none;
     margin: 0;
-    margin-top:50px;
+    margin-bottom: 50px;
 }
 .article-history-list li {
     padding: .5em;
@@ -2415,6 +2415,17 @@ ins{
 .article-history-list a {
     padding-left: .5em;
     float: left;
+}
+
+.article-history-list .click-to-expand {
+    cursor: pointer;
+}
+.article-history-list .dropdown-marker {
+    float: right;
+}
+
+.contributions-title {
+    margin: 50px 0 25px;
 }
 
 .info{
